@@ -3,17 +3,16 @@ Interface item.
 """
 
 import itertools
+from gaphas.item import NW, SE
 from gaphor import UML
 from gaphor.diagram.align import V_ALIGN_BOTTOM
 from gaphor.diagram.dependency import DependencyItem
 from gaphor.diagram.implementation import ImplementationItem
-from gaphor.diagram.interfaceicon import AssembledInterfaceIcon, \
-    ProvidedInterfaceIcon, RequiredInterfaceIcon
+#from gaphor.diagram.interfaceicon import AssembledInterfaceIcon, \
+#    ProvidedInterfaceIcon, RequiredInterfaceIcon
 from gaphor.diagram.klass import ClassItem
 from gaphor.diagram.nameditem import NamedItem
 from gaphor.diagram.rotatable import SimpleRotation
-from gaphor.misc.meta import GObjectPropsMerge
-
 
 class InterfaceItem(ClassItem, SimpleRotation):
     """This item represents an interface drawn as a dot. The class-like
@@ -28,81 +27,86 @@ class InterfaceItem(ClassItem, SimpleRotation):
     __uml__        = UML.Interface
     __stereotype__ = {'interface': lambda self: self.drawing_style != self.DRAW_ICON}
 
+    RADIUS_PROVIDED = 10
+    RADIUS_REQUIRED = 14
+
     def __init__(self, id=None):
         ClassItem.__init__(self, id)
         SimpleRotation.__init__(self)
+        self._draw_required = False
+        self._draw_provided = False
 
-        self._ricon = RequiredInterfaceIcon(self)
-        self._aicon = AssembledInterfaceIcon(self)
-        self._picon = ProvidedInterfaceIcon(self)
-
-        self._icon = self._aicon
-
-
-    def set_drawing_style(self, style):
-        """In addition to setting the drawing style, the handles are
-        make non-movable if the icon (folded) style is used.
-        """
-        ClassItem.set_drawing_style(self, style)
-        # TODO: adjust offsets so the center point is the same
-        if self.drawing_style == self.DRAW_ICON:
-            self.set(width = self._icon.width, height = self._icon.height)
-            # Do not allow resizing of the node
-            for h in self.handles:
-                h.props.movable = False
-
-            # copy align data from class to item instance, we need this because
-            # interface align data can change because of folding/unfolding
-            # interface
-            self.s_align = self.s_align.copy()
-            self.n_align = self.n_align.copy()
-
-            self.s_align.valign = V_ALIGN_BOTTOM
-            self.s_align.outside = True
-            self.s_align.margin = (0, 2) * 4
-            self.n_align.valign = V_ALIGN_BOTTOM
-            self.n_align.outside = True
-            self.n_align.margin = (2, ) * 4
-
-            self._shapes.remove(self._border)
-
-            # update connected handles
-            self.update_handle_pos()
-        else:
-            # Do allow resizing of the node
-            for h in self.handles:
-                h.props.movable = True
-
-            # back to default InterfaceItem class align
-            del self.s_align
-            del self.n_align
-
-            self._shapes.add(self._border)
-
-        self.update_stereotype()
+#        self._ricon = RequiredInterfaceIcon(self)
+#        self._aicon = AssembledInterfaceIcon(self)
+#        self._picon = ProvidedInterfaceIcon(self)
+#
+#        self._icon = self._aicon
 
 
-    def update_handle_pos(self):
-        """
-        Update connected lines position.
-        """
-        for h in self.connected_handles:
-            f = None
-            if gives_provided(h):
-                f = self._icon.get_provided_pos_w
-            elif gives_required(h):
-                f = self._icon.get_required_pos_w
-            if f:
-                x, y = f()
-                h.set_pos_w(x, y)
-                self.connect_handle(h)
+#    def set_drawing_style(self, style):
+#        """In addition to setting the drawing style, the handles are
+#        make non-movable if the icon (folded) style is used.
+#        """
+#        ClassItem.set_drawing_style(self, style)
+#        # TODO: adjust offsets so the center point is the same
+#        if self.drawing_style == self.DRAW_ICON:
+#            self.set(width = self._icon.width, height = self._icon.height)
+#            # Do not allow resizing of the node
+#            for h in self.handles:
+#                h.props.movable = False
+#
+#            # copy align data from class to item instance, we need this because
+#            # interface align data can change because of folding/unfolding
+#            # interface
+#            self.s_align = self.s_align.copy()
+#            self.n_align = self.n_align.copy()
+#
+#            self.s_align.valign = V_ALIGN_BOTTOM
+#            self.s_align.outside = True
+#            self.s_align.margin = (0, 2) * 4
+#            self.n_align.valign = V_ALIGN_BOTTOM
+#            self.n_align.outside = True
+#            self.n_align.margin = (2, ) * 4
+#
+#            self._shapes.remove(self._border)
+#
+#            # update connected handles
+#            self.update_handle_pos()
+#        else:
+#            # Do allow resizing of the node
+#            for h in self.handles:
+#                h.props.movable = True
+#
+#            # back to default InterfaceItem class align
+#            del self.s_align
+#            del self.n_align
+#
+#            self._shapes.add(self._border)
+#
+#        self.update_stereotype()
 
 
-    def get_popup_menu(self):
-        if self.drawing_style == self.DRAW_ICON:
-            return NamedItem.popup_menu + ('separator', 'Rotate', 'Unfold',)
-        else:
-            return ClassItem.get_popup_menu(self)
+#    def update_handle_pos(self):
+#        """
+#        Update connected lines position.
+#        """
+#        for h in self.connected_handles:
+#            f = None
+#            if gives_provided(h):
+#                f = self._icon.get_provided_pos_w
+#            elif gives_required(h):
+#                f = self._icon.get_required_pos_w
+#            if f:
+#                x, y = f()
+#                h.set_pos_w(x, y)
+#                self.connect_handle(h)
+
+
+#    def get_popup_menu(self):
+#        if self.drawing_style == self.DRAW_ICON:
+#            return NamedItem.popup_menu + ('separator', 'Rotate', 'Unfold',)
+#        else:
+#            return ClassItem.get_popup_menu(self)
 
 
     def is_folded(self):
@@ -112,36 +116,46 @@ class InterfaceItem(ClassItem, SimpleRotation):
         return self.drawing_style == self.DRAW_ICON
 
  
-    def update_icon(self, affine):
-        """
-        Figure out if this interface represents a required, provided,
+    def update_icon(self, context):
+        """Figure out if this interface represents a required, provided,
         assembled (wired) or dotted (minimal) look.
         """
-        usages = 0
-        implementations = 0
-        for h in self.connected_handles:
-            if gives_required(h):
-                usages += 1
-            elif gives_provided(h):
-                implementations += 1
+        h_nw = self._handles[NW]
+        cx, xy = h_nw.x + self.width/2, h_nw.y + self.height/2
+        self._draw_required = self._draw_provided = False
+        for item, handle in self.canvas.get_connected_items(self):
+            if gives_required(handle):
+                self._draw_required = True
+            elif gives_provided(handle):
+                self._draw_provided = True
+        radius = RADIUS_PROVIDED
+        if self._draw_required:
+            radius = RADIUS_REQUIRED
 
-        if usages > 0 and implementations == 0:
-            self._icon = self._ricon
-        elif usages > 0 and implementations > 0:
-            self._icon = self._aicon
-        else:
-            self._picon.show_bar = implementations > 0
-            self._icon = self._picon
+        h_nw.x, h_nw.y = cx - radius, cy - radius
+        h_se = self._handles[SE]
+        h_se.x, h_se.y = cx + radius, cy + radius
 
-        self._icon.update_icon()
 
+    def draw_icon(self, context):
+        cr = context.cairo
+        h_nw = self._handles[NW]
+        cx, cy = h_nw.x + self.width/2, h_nw.y + self.height/2
+        if self._draw_required:
+            cr.move_to(cx, cy + RADIUS_REQUIRED)
+            cr.arc_negative(cx, cy, RADIUS_REQUIRED, pi/2, pi*1.5)
+            cr.stroke()
+        if self._draw_provided or not self._draw_required:
+            cr.move_to(cx + RADIUS_PROVIDED, cy)
+            cr.arc(cx, cy, RADIUS_PROVIDED, 0, pi*2)
+            cr.stroke()
 
     def on_glue(self, handle, wx, wy):
+        """Allow connect only to provided/required points in case
+        of interface icon.
+        In folded mode, only allow connections from Implementation and
+        Realization dependencies.
         """
-        Allow connect only to provided/required points in case of interface
-        icon.
-        """
-        d, p1 = ClassItem.on_glue(self, handle, wx, wy)
         if self.drawing_style == self.DRAW_ICON:
             if d < 15:
                 f = None
@@ -156,29 +170,12 @@ class InterfaceItem(ClassItem, SimpleRotation):
         return d, p1
 
 
-    def on_shape_iter(self):
-        it = ClassItem.on_shape_iter(self)
-        if self.drawing_style == self.DRAW_ICON:
-            return itertools.chain(self._icon.on_shape_iter(), it)
-        else:
-            return it
-
-
     def rotate(self, step = 1):
         """
         Update connected handle positions after rotation.
         """
         SimpleRotation.rotate(self, step)
         self.update_handle_pos()
-
-
-    def on_disconnect_handle(self, handle):
-        """
-        Request update on disconnect handle, so icon is updated after i.e.
-        usage dependency disconnection.
-        """
-        self.request_update()
-        return ClassItem.on_disconnect_handle(self, handle)
 
 
 
